# city-backend

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pre-commit-confit.yaml  pyproject.toml
.github/workflows/: docker-image.yml  linter.yml  test.yml
auth/: auth.py
model/: base_models.py
src/: main.py
src/auth/: auth.py
src/ctrl/: user_requests.py
src/model/: base_models.py  conn.py
tests/: test.py
